--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=FiDa-fefdc1f0-bd81-4ce9-b712-93a062e01031;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\\FiDa-fefdc1f0-bd81-4ce9-b712-93a062e01031.mdf",
+    "FileDBContext": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=FiDa;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\\Movies.mdf"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
