--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FiDaDatabase": "Server=localhost,1401;User Id=sa;PASSWORD=A&VeryComplex123Password;Initial Catalog=FiDaDatabase;"
+    "FiDaDatabase": "Server=localhost,1401;User Id=sa;PASSWORD=A&VeryComplex123Password;Initial Catalog=FiDaDatabase;Encrypt=false;"
   },
   "Logging": {
     "LogLevel": {
