--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "FiDaDatabase": "Server=localhost,5555;User Id=sa;PASSWORD=A&VeryComplex123Password;Initial Catalog=FiDaDatabase;Encrypt=false;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
