--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.9"
 services:
   db:
     image: "mcr.microsoft.com/mssql/server:2022-latest"
-    container_name: sql_server2022
+    container_name: sql_server
     ports: # not actually needed, because the two services are on the same network
-      - "5555:5555"
+      - "1401:1433"
     environment:
       - ACCEPT_EULA=y
       - SA_PASSWORD=A&VeryComplex123Password
