--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "FiDaDatabase": "Data Source=localhost,1433;Initial Catalog=FiDaDatabase;User Id=sa;Password=A&VeryComplex123Password;"
+  },
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
