full docker and working

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "FiDaDatabase": "Data Source=localhost,1433;Initial Catalog=FiDaDatabase;User Id=sa;Password=A&VeryComplex123Password;"
+    "FiDaDatabase": "Data Source=sql_server,1433;Initial Catalog=FiDaDatabase;User Id=sa;Password=A&VeryComplex123Password;Integrated Security=false;TrustServerCertificate=true;"
   },
   "DetailedErrors": true,
   "Logging": {
