--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "FiDaDatabase": "Data Source=sql_server,1433;Initial Catalog=FiDaDatabase;User Id=sa;Password=A&VeryComplex123Password;Integrated Security=false;TrustServerCertificate=true;"
+    "FiDaDatabase": "Data Source=sql_server,1433;Initial Catalog=FiDaDatabase;User Id=sa;Password=A&VeryComplex123Password;Integrated Security=false;TrustServerCertificate=true;",
+    "VSDatabase": "Data Source=.\\Data\\SQlLiteDatabase.db"
+
   },
   "DetailedErrors": true,
   "Logging": {
