--- a/FiDa.csproj
+++ b/FiDa.csproj
@@ -15,6 +15,7 @@
       <PrivateAssets>all</PrivateAssets>
       <TreatAsUsed>true</TreatAsUsed>
     </PackageReference>
+    <PackageReference Include="PCloudApi" Version="1.0.1" />
     <PackageReference Include="System.Text.Json" Version="8.0.3" />
   </ItemGroup>
 
