--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "dev-63srp2fh5nhz6t2u.us.auth0.com",
+    "ClientId": "Pfh0boEF8cdkW89JvXvTkb4buCPQBpWL"
+  }
 }
