--- a/FiDa.csproj
+++ b/FiDa.csproj
@@ -9,13 +9,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.28" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.28">
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-			<PrivateAssets>all</PrivateAssets>
-			<TreatAsUsed>true</TreatAsUsed>
-		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.19" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.19" />
 		<PackageReference Include="System.Text.Json" Version="8.0.3" />
 	</ItemGroup>
 
@@ -24,13 +19,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Reference Include="pcloud-sdk-csharp">
-			<HintPath>..\ClassLibrary1\ClassLibrary1\bin\Debug\net6.0\pcloud-sdk-csharp.dll</HintPath>
-		</Reference>
-	</ItemGroup>
-
-	<ItemGroup>
-		<Folder Include="Data\" />
+	  <Reference Include="pcloud-sdk-csharp">
+	    <HintPath>Lib\pcloud-sdk-csharp.dll</HintPath>
+	  </Reference>
 	</ItemGroup>
 
 </Project>
