--- a/FiDa.csproj
+++ b/FiDa.csproj
@@ -21,9 +21,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Reference Include="pcloud-sdk-csharp">
-	    <HintPath>Lib\pcloud-sdk-csharp.dll</HintPath>
-	  </Reference>
+		<Reference Include="pcloud-sdk-csharp">
+			<HintPath>Lib\pcloud-sdk-csharp.dll</HintPath>
+		</Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<Folder Include="Components\" />
 	</ItemGroup>
 
 </Project>
