--- a/FiDa.csproj
+++ b/FiDa.csproj
@@ -11,6 +11,7 @@
 	<PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
 	<ItemGroup>
 		<PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
+		<PackageReference Include="Dropbox.Api" Version="7.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.19" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.19" />
 		<PackageReference Include="System.Text.Json" Version="8.0.3" />
