--- a/FiDa.csproj
+++ b/FiDa.csproj
@@ -10,6 +10,12 @@
 	<PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
 	<PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
 	<ItemGroup>
+	  <Compile Remove="Components\**" />
+	  <Content Remove="Components\**" />
+	  <EmbeddedResource Remove="Components\**" />
+	  <None Remove="Components\**" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
 		<PackageReference Include="Dropbox.Api" Version="7.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.19" />
@@ -25,10 +31,6 @@
 		<Reference Include="pcloud-sdk-csharp">
 			<HintPath>Lib\pcloud-sdk-csharp.dll</HintPath>
 		</Reference>
-	</ItemGroup>
-
-	<ItemGroup>
-		<Folder Include="Components\" />
 	</ItemGroup>
 
 </Project>
