--- a/FiDa.csproj
+++ b/FiDa.csproj
@@ -10,15 +10,19 @@
 	<PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
 	<PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
 	<ItemGroup>
-	  <Compile Remove="Components\**" />
-	  <Content Remove="Components\**" />
-	  <EmbeddedResource Remove="Components\**" />
-	  <None Remove="Components\**" />
+		<Compile Remove="Components\**" />
+		<Content Remove="Components\**" />
+		<EmbeddedResource Remove="Components\**" />
+		<None Remove="Components\**" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
 		<PackageReference Include="Dropbox.Api" Version="7.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.19" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.19">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.19" />
 		<PackageReference Include="System.Text.Json" Version="8.0.3" />
 	</ItemGroup>
