--- a/FiDa.csproj
+++ b/FiDa.csproj
@@ -23,6 +23,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.19" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.19" />
 		<PackageReference Include="System.Text.Json" Version="8.0.3" />
 	</ItemGroup>
@@ -36,5 +37,4 @@
 			<HintPath>Lib\pcloud-sdk-csharp.dll</HintPath>
 		</Reference>
 	</ItemGroup>
-
 </Project>
